objects/OppAssignmentEngineConfiguration__c.object
<CustomObject>
    <description>This object holds Configuration related fields.</description>
    <fields>
        <fullName>Distribution_Method__c</fullName>
        <label>Distribution Method</label>
        <picklist>
            <picklistValues>
                <fullName>EVEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROUND_ROBIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engine_Last_Execution_Date__c</fullName>
        <label>Engine Last Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engine_Next_Execution_Date__c</fullName>
        <label>Engine Next Execution Date</label>
        <type>DateTime</type>
    </fields>
    <label>OppAssignmentEngineConfiguration</label>
    <nameField>
        <label>OppAssignmentEngineConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OppAssignmentEngineConfiguration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>